[package]
name = "krag_types"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
fast_chemail = "0.9.6"
serde = "1.0.215"
smol_str = { version = "0.3.2", features = ["serde"] }
sqlx = { version = "0.8.2", default-features = false, features = ["derive", "sqlite"] }
backend_proc_macro = { path = "backend_proc_macro" }
axum-login = { version = "0.16.0", default-features = false }
bitflags = "2.6.0"
password-auth = "1.0.0"
