[package]
name = "krag_types"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["auth", "sqlite"]
auth = ["axum-login"]
sqlite = ["sqlx", "backend_proc_macro"]

[dependencies]
axum-login = { version = "0.16.0", default-features = false, optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
fast_chemail = "0.9.6"
serde = { version = "1.0.215", features = ["derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
sqlx = { version = "0.8.2", default-features = false, optional = true, features = [
  "derive",
  "sqlite",
] }
backend_proc_macro = { path = "backend_proc_macro", optional = true }
bitflags = "2.6.0"
password-auth = { version = "1.0.0", optional = true }
